# kafka-to-worterbuch

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  matching rules.md
.github/workflows/: release.yml
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.tpl
src/: accumulator.rs  async_kafka.rs  client.rs  command_line.rs  dummy_task.rs  filter.rs  instance_manager.rs  kafka_to_worterbuch.rs  main.rs  perf.rs  transcoder.rs
src/transcoder/: avro.rs  json.rs  plaintext.rs  protobuf.rs
