[package]
name = "kafka-to-worterbuch"
version = "1.1.0"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
edition = "2021"
description = "Dump kafka topics into a Wörterbuch"
repository = "https://github.com/babymotte/kafka-to-worterbuch/"
license = "MIT"
keywords = ["worterbuch", "kafka", "connector", "state", "store"]
categories = ["database-implementations", "web-programming", "caching"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
miette = { version = "5.10.0", features = ["fancy"] }
env_logger = "0.10.0"
log = "0.4.20"
tokio = { version = "1.30.0", features = ["rt"] }
tokio-graceful-shutdown = "0.13.0"
clap = { version = "4.3.21", features = ["derive"] }
rdkafka = { version = "0.33.2", features = ["cmake-build"] }
worterbuch-client = "0.37.2"
serde_json = "1.0.104"
url = { version = "2.4.0", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
apache-avro = "0.15.0"
schema_registry_converter = { version = "3.1.0", default-features = false, features = [
    "futures",
    "avro",
] }
async-trait = "0.1.73"
serde_json_path = "0.6.2"
